<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.allFilters.AllFiltersFragment">

    <ImageButton
        android:id="@+id/btn_back"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_include_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/include_ingredients"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chips_include"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_include_ingredients">


    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:id="@+id/add_include_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp_medium"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chips_include">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add" />

        <EditText
            android:id="@+id/et_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ingredient"
            android:textColorHint="#0055FF" />

        <com.google.android.material.chip.Chip
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="add"
            android:visibility="gone" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dish_type"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dish_type"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/icon_arrow_down"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_include_ingredient" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chips_dish_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_dish_type">

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_main_course"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_course"
            android:visibility="gone" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_side_dish"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/side_dish"
            android:visibility="gone" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_dessert"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dessert"
            android:visibility="gone" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_appetizer"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appetizer"
            android:visibility="gone" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_salad"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salad"
            android:visibility="gone" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_bread"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bread"
            android:visibility="gone" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_breakfast"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breakfast"
            android:visibility="gone" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_soup"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soup"
            android:visibility="gone" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_beverage"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beverage"
            android:visibility="gone" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_sauce"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sauce"
            android:visibility="gone" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_marinade"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marinade"
            android:visibility="gone" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_fingerfood"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fingerfood"
            android:visibility="gone" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_snack"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snack"
            android:visibility="gone" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_drink"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drink"
            android:visibility="gone" />

    </com.google.android.material.chip.ChipGroup>


    <Button
        android:id="@+id/btn_clear"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp_medium"
        android:text="@string/clear"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_accept"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_accept"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp_medium"
        android:text="@string/accept"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_clear" />

</androidx.constraintlayout.widget.ConstraintLayout>