<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_16dp_medium"
        android:layout_marginStart="@dimen/margin_16dp_medium"
        android:text="@string/avatar_source_title"
        />

    <LinearLayout
        android:id="@+id/camera_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:clickable="true"
        android:background="@drawable/text_click_selector"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_camera"
            android:layout_marginStart="@dimen/margin_16dp_medium"
            tools:ignore="ContentDescription"
            />

        <TextView
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avatar_source_camera"
            android:layout_marginStart="@dimen/margin_16dp_medium"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gallery_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/margin_8dp_small"
        android:clickable="true"
        android:background="@drawable/text_click_selector"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_gallery"
            android:layout_marginStart="@dimen/margin_16dp_medium"
            tools:ignore="ContentDescription"
            />

        <TextView
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avatar_source_gallery"
            android:layout_marginStart="@dimen/margin_16dp_medium"
            />

    </LinearLayout>

</LinearLayout>