<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.recipeInfoFromDatabase.RecipeInfoFromDatabaseFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_horizontal_8dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/elevation_8dp_small"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_dairy_free"
                    style="@style/FiltersIconsStyle"
                    android:src="@drawable/icon_dairy_free" />

                <ImageView
                    android:id="@+id/icon_gluten_free"
                    style="@style/FiltersIconsStyle"
                    android:src="@drawable/icon_gluten_free" />

                <ImageView
                    android:id="@+id/icon_vegan"
                    style="@style/FiltersIconsStyle"
                    android:src="@drawable/icon_vegan" />

                <ImageView
                    android:id="@+id/icon_vegetarian"
                    style="@style/FiltersIconsStyle"
                    android:src="@drawable/icon_vegetarian" />

                <ImageView
                    android:id="@+id/icon_healthy_food"
                    style="@style/FiltersIconsStyle"
                    android:src="@drawable/icon_healthy_food" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/elevation_10dp_small"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_recipe_info_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp_small"
                    android:scaleType="centerInside"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_recipe_info_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="10"
                    android:text="@string/hello_blank_fragment"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ch_add_to_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:text="@string/add_to_favorite"/>

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_vertical_8dp"
                android:backgroundTint="?attr/colorSecondary"
                android:elevation="@dimen/elevation_8dp_small"
                android:padding="@dimen/padding_8dp"
                app:cardCornerRadius="@dimen/material_card_corner_radius_20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ch_calories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/calories"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ch_protein"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/protein"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/ch_fat"
                        app:layout_constraintTop_toBottomOf="@id/ch_calories" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ch_fat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/fat"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        app:layout_constraintEnd_toStartOf="@id/ch_carb"
                        app:layout_constraintStart_toEndOf="@id/ch_protein"
                        app:layout_constraintTop_toBottomOf="@id/ch_calories" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ch_carb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/carb"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        app:layout_constraintStart_toEndOf="@id/ch_fat"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ch_calories" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ch_dairy_free"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:checkable="true"
                        android:text="@string/dairy_free"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ch_protein"
                        app:layout_constraintEnd_toStartOf="@id/ch_gluten_free"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ch_gluten_free"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:checkable="true"
                        android:text="@string/gluten_free"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        app:layout_constraintStart_toEndOf="@id/ch_dairy_free"
                        app:layout_constraintTop_toBottomOf="@id/ch_protein"
                        app:layout_constraintEnd_toStartOf="@id/ch_vegan"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ch_vegan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:checkable="true"
                        android:text="@string/vegan"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        app:layout_constraintStart_toEndOf="@id/ch_gluten_free"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ch_protein"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ch_vegetarian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:clickable="false"
                        android:checkable="true"
                        android:text="@string/vegetarian"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ch_dairy_free"
                        app:layout_constraintEnd_toStartOf="@id/ch_very_healthy"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ch_very_healthy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:checkable="true"
                        android:text="@string/very_healthy"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        app:layout_constraintStart_toEndOf="@id/ch_vegetarian"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ch_dairy_free"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="40dp"
                android:nestedScrollingEnabled="true" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>